--- a/sass/Cat_ShoppingStore_cart.scss
+++ b/sass/Cat_ShoppingStore_cart.scss
@@ -11,6 +11,7 @@
 @import 'mixins/_rwd.scss';
 @import './modules/_Cat_ShoppingStore_cart.scss';
 @import './modules/_signIn.scss';
+@import './modules/_likeBox.scss';
 
 // rwd
 @import './respond/_headerMedium.scss';
