--- a/sass/forum-p1.scss
+++ b/sass/forum-p1.scss
@@ -15,3 +15,4 @@
 @import './modules/_header.scss';
 @import './respond/_headerMedium.scss';
 @import './respond/_headerSmall.scss';
+@import './modules/_likeBox.scss';
