--- a/sass/halfway_house_search.scss
+++ b/sass/halfway_house_search.scss
@@ -21,3 +21,4 @@
 @import './respond/_headerMedium.scss';
 @import './respond/_headerSmall.scss';
 @import 'modules/_footer.scss';
+@import './modules/_likeBox.scss';
