--- a/sass/index.scss
+++ b/sass/index.scss
@@ -14,6 +14,7 @@
 @import 'respond/_desktop.scss';
 @import './modules/_loading.scss';
 @import './modules/_signIn.scss';
+@import './modules/_likeBox.scss';
 // rwd
 @import './respond/_headerMedium.scss';
 @import './respond/_headerSmall.scss';
