--- a/sass/member.scss
+++ b/sass/member.scss
@@ -17,3 +17,4 @@
 @import 'respond/_footerSmall.scss';
 @import './respond/_headerMedium.scss';
 @import './respond/_headerSmall.scss';
+@import './modules/_likeBox.scss';
