--- a/sass/modules/_halfway_house_detail.scss
+++ b/sass/modules/_halfway_house_detail.scss
@@ -17,6 +17,10 @@
     .breadcrumbs {
         margin-left: 50px;
         margin-bottom: 0;
+        a{
+            display: inline-block;
+            padding: 10px 20px;
+        }
     }
     .banner {
         margin: auto;
@@ -44,7 +48,7 @@
             .bigpic {
                 width: 80%;
                 margin-top: 100px;
-                height: 400px; // background-image: url(../images/halfdetail1.jpg);
+                height: 400px; 
                 background-size: 100%;
                 background-repeat: no-repeat;
             }
