--- a/sass/modules/_guide.scss
+++ b/sass/modules/_guide.scss
@@ -14,7 +14,7 @@
 }
 
 body {
-    background-image: url(../images/colorful.jpg);
+    background-image: url(../images/colorful2.jpg);
     background-size: cover;
 }
 
