--- a/sass/modules/_catSearch.scss
+++ b/sass/modules/_catSearch.scss
@@ -1,6 +1,7 @@
 body {
-    background-image: url('../images/marble.jpg'); // background-repeat: no-repeat;
-    // background-size: cover;
+    background-image: url(../images/marble.jpg);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .right {
