--- a/css/Cat_ShoppingStore.css
+++ b/css/Cat_ShoppingStore.css
@@ -402,7 +402,7 @@ header ul li:nth-child(3):after {
 .wrap {
   margin-left: 200px;
   line-height: 22px;
-  
+  background-image: url(../images/marble2.jpg);
   background-size: cover;
   background-attachment: fixed;
   background-image: url(../images/grassBG.jpg); }
