--- a/css/halfway_house_search.css
+++ b/css/halfway_house_search.css
@@ -757,7 +757,8 @@ header ul li:nth-child(2):after {
 footer {
   background-color: #f5eae3;
   margin-left: 200px;
-  padding: 15px; }
+  padding: 15px;
+  height: 15vh; }
   footer .follow {
     padding: 15px;
     display: flex;
