--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -3,6 +3,7 @@ footer {
     background-color: #f5eae3;
     margin-left: 200px;
     padding: $gap;
+    height: 15vh;
     .follow {
         padding: $gap;
         display: flex;
