--- a/css/Cat_ShoppingStore_product.css
+++ b/css/Cat_ShoppingStore_product.css
@@ -202,7 +202,8 @@ body {
 footer {
   background-color: #f5eae3;
   margin-left: 200px;
-  padding: 15px; }
+  padding: 15px;
+  height: 15vh; }
   footer .follow {
     padding: 15px;
     display: flex;
