--- a/css/catSearch.css
+++ b/css/catSearch.css
@@ -126,7 +126,8 @@ input, select {
 footer {
   background-color: #f5eae3;
   margin-left: 200px;
-  padding: 15px; }
+  padding: 15px;
+  height: 15vh; }
   footer .follow {
     padding: 15px;
     display: flex;
