--- a/sass/modules/_catContent.scss
+++ b/sass/modules/_catContent.scss
@@ -1,10 +1,11 @@
 .right {
     width: calc(100% - 200px);
     margin-left: 200px;
+    padding-bottom: 100px;
+    background-color: #f5eedce5;
     .container1 {
         width: 100%;
         position: relative;
-        margin-bottom: 100px;
         padding: 60px 50px 0;
         &,
         & * {
