--- a/sass/respond/_indexSmall.scss
+++ b/sass/respond/_indexSmall.scss
@@ -94,6 +94,7 @@
             }
             .centerbox{
                 width: 70%;
+                margin: 0;
             }
         }
         .imgbox {
@@ -106,21 +107,22 @@
                 {
                 display: inline-block;
                 width: 30%;
-                margin-top: -50px;
+                margin-top: -70px;
                 img {
                     width: 100%;
                 }
             }
             #left{
-                margin-right: 50px;
+                margin-right: 55px;
             }
             #right{
-                margin-left: 50px;
+                margin-left: 55px;
             }
             .center {
                 display: block;
                 width: 100%;
                 margin: 0 auto;
+                margin-top: -30px;
                 img{
                     width: 40%;
                 }
