--- a/sass/backReport.scss
+++ b/sass/backReport.scss
@@ -47,6 +47,7 @@
                         padding-top: 16px;
                         padding-bottom: 8px;
                         font-size: $font-size-base;
+                        vertical-align: middle;
                         .fa-trash {
                             font-size: $font-size-base*1.2;
                             color: firebrick;
