--- a/css/Cat_ShoppingStore_cart.css
+++ b/css/Cat_ShoppingStore_cart.css
@@ -580,14 +580,26 @@ table {
   margin-top: 5%;
 }
 
+td {
+  text-align: center;
+}
+
 td .confirm {
   border-radius: 100px;
   cursor: pointer;
   letter-spacing: 3px;
-  padding: 2% 8% 2% 10%;
+  padding: 1% 4%;
   border: 2px solid #333333;
   background-color: transparent;
   color: #333;
+  margin-top: 10px;
+  margin-bottom: 25px;
+}
+
+td .confirm:hover {
+  background-color: #EAAF88;
+  border: 2px solid #EAAF88;
+  color: #fff;
 }
 
 .pay {
@@ -628,7 +640,8 @@ p {
   width: 50px;
 }
 
-.saleCard, .payCard {
+.saleCard,
+.payCard {
   padding: 4% 10%;
   border: 3px solid #EAAF88;
   background-color: rgba(255, 255, 255, 0.6);
