--- a/css/index.css
+++ b/css/index.css
@@ -1332,7 +1332,7 @@ footer {
 }
 
 .noticegame .boxcontainer .centerbox img {
-  width: 80%;
+  width: 65%;
 }
 
 .noticegame .smallbox {
@@ -1951,6 +1951,7 @@ footer {
     display: block;
     margin: auto;
     width: 100%;
+    padding-right: 0;
   }
   .noticegame .smallask img {
     width: 100%;
@@ -1963,6 +1964,7 @@ footer {
   .noticegame .boxcontainer .centerbox {
     width: 70%;
     margin: 0;
+    margin-left: 25px;
   }
   .noticegame .imgbox {
     display: none;
