--- a/sass/respond/_indexSmall.scss
+++ b/sass/respond/_indexSmall.scss
@@ -82,6 +82,7 @@
             display: block;
             margin: auto;
             width: 100%;
+            padding-right: 0;
             img {
                 width: 100%;
                 margin: auto;
@@ -95,6 +96,7 @@
             .centerbox{
                 width: 70%;
                 margin: 0;
+                margin-left: 25px;
             }
         }
         .imgbox {
