首頁banner 商城背景更換

--- a/css/Cat_ShoppingStore.css
+++ b/css/Cat_ShoppingStore.css
@@ -403,10 +403,9 @@ header ul li:nth-child(3):after {
 .wrap {
   margin-left: 200px;
   line-height: 22px;
-  background-image: url(../images/marble2.jpg);
+  background-image: url(../images/marble.jpg);
   background-size: cover;
-  background-attachment: fixed;
-  background-image: url(../images/grassBG.jpg); }
+  background-attachment: fixed; }
 
 .wrapCenter {
   letter-spacing: 3px;
