--- a/css/Cat_ShoppingStore_product.css
+++ b/css/Cat_ShoppingStore_product.css
@@ -388,7 +388,7 @@ body {
   font-size: 14px;
   background-size: cover;
   background-attachment: fixed;
-  background-image: url(../images/grassBG.jpg); }
+  background-image: url(../images/marble.jpg); }
 
 .wrapCenter {
   width: 80%;
