--- a/sass/modules/_Cat_ShoppingStore.scss
+++ b/sass/modules/_Cat_ShoppingStore.scss
@@ -6,10 +6,9 @@ body {
 .wrap {
 	margin-left: 200px;
 	line-height: 22px;
-	background-image: url(../images/marble2.jpg);
+	background-image: url(../images/marble.jpg);
     background-size: cover;
 	background-attachment: fixed;
-	background-image: url(../images/grassBG.jpg);
 
 }
 
