--- a/sass/modules/_Cat_ShoppingStore_product.scss
+++ b/sass/modules/_Cat_ShoppingStore_product.scss
@@ -13,7 +13,7 @@ body{
     font-size: 14px;
     background-size: cover;
     background-attachment: fixed;
-    background-image: url(../images/grassBG.jpg);
+    background-image: url(../images/marble.jpg);
 }
 
 .wrapCenter{
