--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -64,7 +64,7 @@
 
 .banner {
     height: 100vh;
-    background-image: url(../img/banner1.jpg);
+    background-image: url(../img/banner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: left center;
@@ -72,7 +72,8 @@
     justify-content: center;
     align-items: center;
     color: #fff;
-    text-shadow: 2px 2px 3px #333333;
+    text-shadow: 2px 2px 3px #000;
+   
     .findBox {
         display: flex;
         justify-content: center;
@@ -113,6 +114,7 @@
             text-align-last: center;
             padding: 3px 6px;
             font-size: $font-size-h4;
+            font-weight: lighter;
             color: #222222;
             cursor: pointer;
             -webkit-appearance: none;
@@ -134,6 +136,7 @@
             border-radius: 40px;
             padding: 5px $gap*2.5 5px $gap;
             font-size: $font-size-h4;
+            font-weight: lighter;
             &:-moz-placeholder {
                 color: #333;
             }
