--- a/css/Cat_ShoppingStore.css
+++ b/css/Cat_ShoppingStore.css
@@ -436,8 +436,7 @@ h2 {
   width: 100%;
   text-align: center;
   box-sizing: border-box;
-  border: 2px solid #333;
-  background-color: #eee; }
+  border: 2px solid #333; }
 
 .menuTitle {
   display: inline-block;
